# embassy_playground

./: Cargo.toml  ]  memory.x
.cargo/: config.toml
scripts/: flash_and_log.sh
src/: main.rs  main_backup.rs
