[package]
name = "noctuary_sonar"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7"}
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "defmt", "executor-thread"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-rp = { version = "0.10.0", features = ["critical-section-impl", "time-driver", "defmt", "rp235xb"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.6.0" }
log = { version = "0.4", default-features = false }
panic-halt = "0.2"
